# SmartNewsAPI

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  dockerbuildpush.yml  terraform-apply.yml  terraform-plan.yml
alembic/versions/: 8e1fef6605c8_init_articles_with_pgvector.py
app/: config.py  dependencies.py  feeds.json  main.py  schemas.py
app/api/: routes.py
app/core/: settings.py
app/db/: engine.py  repo.py
app/ingestion/: quality.py  rss.py
app/routes/: __init__.py  feeds.py  health.py  indexing.py  search.py
app/services/: chunking.py  embeddings.py  vector_store.py
app/tests/: conftest.py  test_chunking_split.py  test_embeddings_helpers.py  test_quality.py  test_text_utils.py  test_utils_misc.py
app/utils/: misc.py  patterns.py  text_utils.py
