[project]
name = "smartnewsapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]
